revised ch1 of Guidelines

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -405,7 +405,7 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\Q2PQ5PLN\\Freshwater et al. - 2020 - Benefits and limitations of increasing the stock-s.pdf}
 }
 
-@techreport{godboutStockStatusWild2004a,
+@techreport{godboutStockStatusWild2004,
   title = {Stock {{Status}} of {{Wild Chum Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Keta }}{{{\emph{Walbaum}}}}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
   author = {Godbout, L and Irvine, J. R. and Bailey, D. and Van Will, P. and McConnell, C.},
   year = {2004},
@@ -468,8 +468,7 @@
   volume = {2018/011},
   pages = {ix + 77},
   abstract = {Status assessments for Chum Salmon (Oncorhynchus keta) under the Wild Salmon Policy (WSP) have been limited, in part because recruitment time-series required to calculate stock- recruitment based benchmarks are not consistently available. Alternative benchmarks have been proposed for data-limited Conservation Units (CUs) using percentiles of the observed spawner abundance time-series. However, these benchmarks have not been evaluated against stock-recruitment benchmarks currently used to assess status on abundances for data-rich CUs. Our goals were to evaluate percentile-based benchmarks against stock-recruitment based benchmarks accounting for high uncertainties and possible biases in spawner abundances, catches, recruitment estimates, and age-at-maturity. We used two approaches to evaluate benchmarks based on a retrospective comparison through the historical record and a prospective simulation model under numerous hypothetical future scenarios. We demonstrate an approach for providing assessments that accounts for uncertainties in benchmarks, and provide advice on the applicability of percentile-based benchmarks for data-limited CUs of Chum Salmon relative to stock-recruitment benchmarks used for data-rich CUs. In general, our results support the application of percentile-based benchmarks for data-limited CUs of Chum Salmon when productivity is moderate to high ({$>$}2.5 recruits/spawner) and harvest rates are low to moderate ({$\leq$}40\%). However, we suggest further evaluation of percentile benchmarks (and the consideration of alternatives) when productivity is expected to be low and/or harvest rates high. Under these conditions, concurrent declines in abundances and percentile benchmarks can results in status assessments that are more optimistic than those from stock-recruitment benchmarks due to shifting baselines.},
-  langid = {english},
-  file = {C\:\\Users\\HoltC\\Zotero\\storage\\SWJCIYX6\\Holt et al. - Evaluating Benchmarks of Biological Status for Dat.pdf}
+  langid = {english}
 }
 
 @article{holtIndicatorsStatusBenchmarks2009a,
@@ -692,7 +691,7 @@
 
 @misc{pacificsalmonfoundationPacificSalmonExplorer2021,
   title = {Pacific {{Salmon Explorer}}},
-  author = {{Pacific Salmon Foundation}},
+  author = {{Pacific Salmon Foundation,}},
   year = {2021},
   howpublished = {https://salmonexplorer.ca/\#!/vancouver-island-mainland-inlets/chum}
 }
