--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -263,6 +263,10 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\RTA7HFVR\\Cook et al. - Framework Assessment of the Offshore American Lobs.pdf}
 }
 
+@misc{Cosewic2020SBCCK2,
+  title = {Cosewic2020\_{{SBC}}\_{{CK2}}.Pdf}
+}
+
 @article{cunninghamSizeSelectivityPredation2013,
   title = {Size {{Selectivity}} of {{Predation}} by {{Brown Bears Depends}} on the {{Density}} of {{Their Sockeye Salmon Prey}}},
   author = {Cunningham, Curry J. and Ruggerone, Gregory T. and Quinn, Thomas P.},
@@ -550,13 +554,13 @@
 }
 
 @techreport{godboutStockStatusWild2004,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
-  title = {Stock {{Status}} of {{Wild Chum Salmon}} ({{Oncorhynchus}} Keta {{Walbaum}}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
-  author = {Godbout, Lyse and Irvine, James R and Bailey, D and Van Will, P and McConnell, C},
+  title = {Stock {{Status}} of {{Wild Chum Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Keta }}{{{\emph{Walbaum}}}}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
+  author = {Godbout, L and Irvine, J. R. and Bailey, D. and Van Will, P. and McConnell, C.},
   year = {2004},
   number = {2004/007},
-  pages = {vi + 45},
-  abstract = {We describe the status of six main chum salmon stock groupings from the Central Coast and the southern non-Fraser Inner Study Area (ISA). The first four correspond to the chum returning to Statistical Areas 7, 8, 9, and 10 and are referred as ``northern stocks''. The fifth stock is those fish returning to Area 11 (Seymour Inlet). The sixth stock comprises fish spawning in the ISA (Johnstone and Georgia straits) but excludes fish from the Fraser River. Our overall goal was to assess the status of these stocks and describe how status varied temporally between 1953- 2002. Status was based primarily on trends in escapement as well as a comparison of escapement to reference points. We calculated two reference points based on the long-term median escapement (LTME) that defined three zones (red:{$\leq$} 60\% LTME, amber:{$>$}60 \% LTME {$<$} escapement {$<$} 80\%LTME, and green: {$\geq$} 80\%LTME). We performed a similar analysis using total run sizes. Status variability within stock groupings was assessed by calculating and comparing relative rates of change in escapement per year for individual streams. Temporal variations in stock status were analysed by evaluating the stock status based on the complete time series and based on data from the last three generations only. Chum salmon in Areas 7 and 8 were generally in the green zone. While there are no apparent management concerns with these fish, we recommend that Area 7 chum should be monitored closely since total run size appears to have been reduced by \textasciitilde 22\% during the last three generations. We have some concerns for chum returning to Areas 9-11, and north-eastern Johnstone Strait (EJST). Although long and short-term trends in escapements to Area 9 were not negative, the median escapement and total run size during the last three generations were in the amber zone. Escapements in Area 10 showed a negative trend during the last three generations, although the median escapement was in the green zone. Inefficient escapement surveys during the last 3 generations might be responsible for this apparent decline in escapement. Escapements in Area 11 declined over time, and the median of the last three generations was in the amber zone while total run size was in the green zone. There was significant variability in patterns for the southern stocks. Stocks on both sides of Johnstone Strait have declined recently. The decline of the Eastern stock was the most drastic of all; recent escapements and total run sizes were in the red zones, both being reduced to less than half their long-term median. Interestingly, chum in North West Georgia Strait (NWGS) increased during the last three generations; escapements and total run size generally were in the green zone. This increase may be related to changing fishery practices on enhanced chum returning to this area. Chum returning to NEGS, SWGS, and SEGS had similar patterns to each other. All Georgia Strait stocks increased during the complete time series and during the last generations and were in the green zone.}
+  pages = {45},
+  institution = {{Fisheries and Oceans Canada}},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\95CI8IG5\\282237.pdf}
 }
 
 @article{grant2017FraserSockeye2020,
@@ -638,8 +642,7 @@
   volume = {2018/011},
   pages = {ix + 77},
   abstract = {Status assessments for Chum Salmon (Oncorhynchus keta) under the Wild Salmon Policy (WSP) have been limited, in part because recruitment time-series required to calculate stock- recruitment based benchmarks are not consistently available. Alternative benchmarks have been proposed for data-limited Conservation Units (CUs) using percentiles of the observed spawner abundance time-series. However, these benchmarks have not been evaluated against stock-recruitment benchmarks currently used to assess status on abundances for data-rich CUs. Our goals were to evaluate percentile-based benchmarks against stock-recruitment based benchmarks accounting for high uncertainties and possible biases in spawner abundances, catches, recruitment estimates, and age-at-maturity. We used two approaches to evaluate benchmarks based on a retrospective comparison through the historical record and a prospective simulation model under numerous hypothetical future scenarios. We demonstrate an approach for providing assessments that accounts for uncertainties in benchmarks, and provide advice on the applicability of percentile-based benchmarks for data-limited CUs of Chum Salmon relative to stock-recruitment benchmarks used for data-rich CUs. In general, our results support the application of percentile-based benchmarks for data-limited CUs of Chum Salmon when productivity is moderate to high ({$>$}2.5 recruits/spawner) and harvest rates are low to moderate ({$\leq$}40\%). However, we suggest further evaluation of percentile benchmarks (and the consideration of alternatives) when productivity is expected to be low and/or harvest rates high. Under these conditions, concurrent declines in abundances and percentile benchmarks can results in status assessments that are more optimistic than those from stock-recruitment benchmarks due to shifting baselines.},
-  langid = {english},
-  file = {C\:\\Users\\HoltC\\Zotero\\storage\\SWJCIYX6\\Holt et al. - Evaluating Benchmarks of Biological Status for Dat.pdf}
+  langid = {english}
 }
 
 @techreport{holtEvaluationBenchmarksConservation2009,
@@ -764,9 +767,9 @@
   year = {2019},
   journal = {Canadian Science Advisory Secretariat Research Document},
   volume = {2019/001},
-  pages = {ix + 81 p},
+  pages = {vii + 88p},
   langid = {english},
-  file = {C\:\\Users\\HoltC\\Zotero\\storage\\55RZH9X5\\Korman et al. - Evaluation framework for assessing potential Pacif.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\JAD2WC9S\\Korman et al. - Evaluation framework for assessing potential Pacif.pdf}
 }
 
 @article{kronlundConsiderationsDesignRebuilding2021,
@@ -971,7 +974,7 @@
 
 @techreport{pacificsalmonfoundationMethodsAssessingStatus2020,
   title = {Methods for {{Assessing Status}} and {{Trends}} in {{Pacific Salmon Conservation Units}} and Their {{Freshwater Habitats}}},
-  author = {Pacific Salmon Foundation},
+  author = {Pacific Salmon Foundation,},
   year = {2020},
   number = {The Pacific Salmon Foundation, Vancouver BC, Canada, version 1.0},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\T7XPHSG9\\lib_459.pdf}
